Actalizar index.html

--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
         <div class="container">
             <div class="header">
                 <h1>🐍 Fundamentos de Programación</h1>
+                    <div class="python-logo">
+                        <img src="img/jj.png" width="80" height="80" alt="JJ Lizcano">
+                    </div>   
                 <p>Análisis y Desarrollo de Software con Python</p>
                 <p style="font-size: 1rem; opacity: 0.8;">De principiante a desarrollador en 8 módulos progresivos</p>
             </div>
+          
 
             <div class="course-stats">
                 <div class="stat-card">
