--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
         <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
+        <!--     
         <div class="learning-path">
             <h4 style="margin-bottom: 15px; color: #333;">Ruta de Aprendizaje</h4>
             <div class="path-steps" id="pathSteps"></div>
         </div>
-
+        -->
         <div class="container">
             <div class="header">
-                <h1>🐍 Fundamentos de Programación</h1>
+                <h1>🐍 Fundamentos de Programación 🐍</h1>
                     <div class="python-logo">
                         <img src="img/jj.png" width="80" height="80" alt="JJ Lizcano">
                     </div>   
@@ -56,8 +57,9 @@
             </div>
 
             <div class="action-buttons">
-                <button class="btn btn-primary" onclick="continueCurrentModule()">Continuar Aprendiendo</button>
-                <button class="btn btn-secondary" onclick="resetProgress()">Reiniciar Curso</button>
+                <a href="Bienvenida.html">
+                    <button class="btn btn-primary">Saludo de Bienvenida</button>
+                </a>
             </div>
 
             <div class="footer">
