--- a/Bienvenida.html
+++ b/Bienvenida.html
@@ -210,7 +210,7 @@
             
             // Nuevo setTimeout para la redirección
             setTimeout(() => {
-                window.location.href = 'Mod_1.html';
+                window.location.href = 'mod_1.html';
             }, 500); // 500 ms después de cambiar el botón (0.5 segundos extra)
         }, 3000);
         }
