--- a/mod_4.html
+++ b/mod_4.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon" id="favicon">
     <title>Módulo 4: Estructuras de Control</title>
     <link rel="stylesheet" href="css/mod4.css">
 </head>
