--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="progress-bar">
                     <div class="progress-fill" id="progressFill" style="width: 50%"></div>
                 </div>
-                <p>Progreso: <span id="progressText">50%</span> | Próximo módulo: <strong>Variables y Tipos de Datos</strong></p>
+                <p>Progreso: <span id="progressText">50%</span> | Próximo módulo: <strong>Estructuras de Datos</strong></p>
             </div>
 
             <div class="modules-grid" id="modulesGrid">
